--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /OOPnDOP/.vs/OOPnDOP
+/OOPnDOP/OOPnDOP/bin/Debug/net6.0
+/OOPnDOP/OOPnDOP/obj/Debug/net6.0
+/OOPnDOP/OOPnDOP/obj/Release/net6.0
